new feature: upgrade to java 17 version